[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clone-org"
version = "0.0.2"
dynamic = ["dependencies"]
description = "Clone all repos from a GitHub organization"

[project.urls]
"Source Code" = "https://github.com/ghinks/clone-org"

[project.scripts]
clone-org = "clone_org.main:clone"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
