[tool.poetry]
name = "clone-org"
version = "1.0.10"
description = "Clone all the repos or just some by language from an org"
authors = ["Glenn Hinks <ghinks@yahoo.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "clone_org"}]
repository = "https://github.com/ghinks/clone-org"  # Add your GitHub repository URL here
homepage = "https://github.com/ghinks/clone-org"  # Add your project homepage URL here


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
sgqlc = "^16.3"
tabulate = "^0.9.0"
flake8 = ">=6.1,<8.0"
pytest = ">=7.4.3,<9.0.0"

[tool.poetry.scripts]
clone-org = "clone_org.main:clone"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
